package projet;

public interface Observateur {
    public void actualiser(Sujet s);
}
